--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -3,5 +3,10 @@
         <a routerLink="home" class="text-white hover:text-gray-400">Home</a>
         <a routerLink="products" class="text-white hover:text-gray-400">Products</a>
         <a routerLink="form" class="text-white hover:text-gray-400">Form</a>
+        <a routerLink="dashboard" class="text-white hover:text-gray-400">Dashboard</a>
+        <a routerLink="carrito" class="text-white hover:text-gray-400">Carrito</a>
+        <a routerLink="login" class="text-white hover:text-gray-400">Login</a>
+        <a routerLink="register" class="text-white hover:text-gray-400">Register</a>
+        <button class="text-white hover:text-gray-400" (click)=" logout()">Logout</button>
     </div>
 </nav>
