--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,2 +1,30 @@
-<p *ngIf="email != null">Bienvenido {{email}}</p>
-<h1 >Todavia no hay home</h1>
+<div class="flex flex-col justify-center  items-center gap-y-5">
+    <img src="landing-image.jpg" alt="Landing Page">
+    <div class="flex flex-col justify-center py-6 items-center gap-y-5">
+        <h1>Adéntrate en el corazón de Nápoles con Nike Field General, un clásico total y el lienzo eprfecto para lucir tu estilo personal.</h1>
+        <button class="bg-black text-white font-bold py-2 px-4 rounded-full">
+            Descubrir la colección
+        </button>
+    </div>
+    <div class="w-[90%]">
+        <div class="py-10 flex flex-col gap-y-5">
+            <h2 class="text-3xl  ">Nike</h2>
+          
+            <div class="flex justify-around  gap-6">
+            <div class="w-1/3">
+                <img src="product1.jpg" alt="Product 1" class="w-full h-auto shadow-lg">
+                <p class="mt-4 text-2xl">Product 1</p>
+            </div>
+            <div class="w-1/3">
+                <img src="product2.jpg" alt="Product 2" class="w-full h-auto shadow-lg">
+                <p class="mt-4 text-2xl">Product 2</p>
+            </div>
+            <div class="w-1/3">
+                <img src="product3.jpg" alt="Product 3" class="w-full h-auto shadow-lg">
+                <p class="mt-4 text-2xl">Product 3</p>
+            </div>
+            </div>
+          </div>
+    
+</div>
+</div>
